--- a/empapp/templates/django_registration/registration_form.html
+++ b/empapp/templates/django_registration/registration_form.html
@@ -1,4 +1,4 @@
-{%extends "registration/base.html"%} 
+<!-- {%extends "registration/base.html"%} 
 {% load bootstrap4 %}
 {% block content %}
 
@@ -49,4 +49,4 @@
   </div>
 </div>
 
-{% endblock %}
+{% endblock %} -->
